--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
+    "vue-simple-alert": "^1.1.1",
     "vuejs-logger": "1.5.3",
     "vuetify": "^2.0.0"
   },
