--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "0.19.0",
     "core-js": "^2.6.5",
+    "moment-timezone": "^0.5.27",
     "vue": "^2.6.10",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.2",
     "vue-simple-alert": "^1.1.1",
     "vuejs-logger": "1.5.3",
